# py-htmx

./: .gitignore  .markdownlint.json  README.md  dist.css  index.html  pyproject.toml  tailwind.config.js
client/: index.html  package.json  tailwind.config.js  tsconfig.json
client/src/: App.svelte  output.css
client/src/components/: GithubLink.svelte  NavBar.svelte  NavBarButton.svelte  NavBarCentre.svelte  NavBarEnd.svelte  NavBarHeading.svelte  NotesPage.svelte  Router.svelte  ThemeSelector.svelte
js/: collapse.js
notes/: index.html
notes/src/: App.svelte  main.ts  output.css
notes/src/components/: Drawer.svelte  Footer.svelte  GithubLink.svelte  NavBar.svelte  NavBarButton.svelte  NavBarEnd.svelte  NavBarHeading.svelte  NavBarStart.svelte  SearchBar.svelte  ThemeSelector.svelte
pages/: b2_ps2.md  b2_ps3.md  b6_ps1.md  b6_ps2.md  home.md  index.md
pages/Physics/: index.md
pages/Physics/B6: Condensed matter physics/: PS1.md
pages/Research/: home.md
src/py_htmx/: __init__.py  components.py  config.py  main.py  markdown.py  models.py
src/py_htmx/apps/: __init__.py
src/py_htmx/apps/notes_app/: __init__.py  common.py  config.py  element_ids.py  endpoint_names.py  main.py  main_page.py  physics_functions.py
