[project]
name = "py-htmx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Richard Brearton", email = "richard.brearton@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.9.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.dynamic]
version = { attr = "py_htmx.__version__" }

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PLR0913", "SIM117", "COM812", "T201"]

[dependency-groups]
dev = ["fastapi>=0.115.3", "uvicorn>=0.32.0"]
