[project]
name = "py-htmx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Richard Brearton", email = "richard.brearton@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "latex2mathml>=3.77.0",
    "markdown2>=2.5.1",
    "numpy>=2.1.3",
    "plotly>=5.24.1",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "pygments>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.dynamic]
version = { attr = "py_htmx.__version__" }

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["PLR0913", "SIM117", "COM812", "T201", "D413", "PD901"]
select = ["ALL"]
unfixable = ["F401"]                                              # Ignore unused imports

[dependency-groups]
dev = ["fastapi>=0.115.3", "ipykernel>=6.29.5", "uvicorn>=0.32.0"]

[project.scripts]
notes = "py_htmx.apps.notes_app.main:main"
